--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,6 +30,7 @@ website:
         - sector and industry.qmd
         - headquarters.qmd
         - monetary statistics.qmd
+        - newcomers and global 500.qmd
         - ceo and employees.qmd
 
   page-footer: 
